test/Fail/JasonReedPruning.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  _22 = f _22 : o (blocked on _22)

JasonReedPruning.agda:21.11-26.23: error: [UnsolvedMetaVariables]
Unsolved metas at the following locations:
  JasonReedPruning.agda:21.11-12
  JasonReedPruning.agda:23.11-12
  JasonReedPruning.agda:26.19-23
